--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/styles": "^6.1.9",
+    "mysql2": "^3.11.5",
     "next": "15.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "styles": "^0.2.1"
   },
   "devDependencies": {
